k8s-manifests/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dumplings-frontend
  labels:
    app: dumplings-frontend
spec:
  type: ClusterIP
  selector:
    app: dumplings-frontend
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
