k8s-manifests/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dumplings-ingress
  labels:
    name: dumplings-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: "nginx"
  tls:
    - hosts:
        - "po-khmel.space"
      secretName: letsencrypt
  rules:
    - host: "po-khmel.space"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: dumplings-frontend
                port:
                  number: 80
